Refactor folder structure and makes clean code

--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
